[package]
name = "aseprite-dmi"
version = "1.1.0"
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/spacestation13/aseprite-dmi"

[lib]
name = "dmi"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0"
arboard = "=3.3.2"
base64 = "0.22.1"
image = { version = "=0.24.9", default-features = false, features = ["png"] }
mlua = { version = "=0.8.10", features = ["module", "lua54", "serialize"] }
native-dialog = "0.7.0"
png = "0.17.16"
reqwest = { version = "=0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "=0.29.11"
thiserror = "2.0"
webbrowser = "1.0"

bstr = "=1.6.2"
fdeflate = "=0.3.5"
tower = "=0.4.13"
tokio = "=1.38.1"
tokio-util = "=0.7.11"
zerovec = "=0.8.1"
yoke = "=0.7.1"
zerofrom = "=0.1.2"
hashbrown = "=0.15.0"
home = "=0.5.5"
tinystr = "=0.7.1"
raw-window-handle = "=0.5.0"
writeable = "=0.5.2"
