[package]
name = "aseprite-dmi"
version = "1.4.0"
edition = "2021"
repository = "https://github.com/spacestation13/aseprite-dmi"

[lib]
name = "dmi"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0"
arboard = "3.5"
base64 = "0.22.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }
mlua = { version = "0.11.6", features = ["module", "lua54", "serialize"] }
native-dialog = "0.9"
png = "0.17.16"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
thiserror = "2.0"
open = "5.3"
